Add functioning refactor of Site Info behavior